' + $location.client_id() + ' +

--- a/central-js/client/src/html/service/city/built-in/index.html
+++ b/central-js/client/src/html/service/city/built-in/index.html
@@ -40,7 +40,7 @@
         <button style="display: none;"
                 class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">igov.org.ua</span></button>
         <a class="btn btn-info"
-           ng-href="https://bankid.privatbank.ua/DataAccessService/das/authorize?response_type=code&client_id={{$location.client_id()}}&redirect_uri={{$location.protocol()}}://{{$location.host()}}:{{$location.port()}}{{$state.href('service.general.city.built-in.bankid', {'id': service.nID, 'region': data.region.nID, 'city': data.city.nID})}}">
+           ng-href="https://bankid.privatbank.ua/DataAccessService/das/authorize?response_type=code&client_id=9b0e5c63-9fcb-4b11-84ff-31fc2cea8801&redirect_uri={{$location.protocol()}}://{{$location.host()}}:{{$location.port()}}{{$state.href('service.general.city.built-in.bankid', {'id': service.nID, 'region': data.region.nID, 'city': data.city.nID})}}">
             <i class="icon-bank-id"></i>
             <span class="btn-text">BankID</span>
         </a>
