--- a/central-js/client/src/html/service/country/built-in/index.html
+++ b/central-js/client/src/html/service/country/built-in/index.html
@@ -5,7 +5,7 @@
 	<div class="list-group-item">
 		<span>Крок 1. Увійдіть в систему через</span>
 		<button class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">igov.org.ua</span></button>
-		<a class="btn btn-info" ng-href="https://bankid.privatbank.ua/DataAccessService/das/authorize?response_type=code&client_id={{$location.client_id()}}&redirect_uri={{$location.protocol()}}://{{$location.host()}}:{{$location.port()}}{{$state.href('service.general.country.built-in.bankid', {'id': service.nID})}}">
+		<a class="btn btn-info" ng-href="https://bankid.privatbank.ua/DataAccessService/das/authorize?response_type=code&client_id=9b0e5c63-9fcb-4b11-84ff-31fc2cea8801&redirect_uri={{$location.protocol()}}://{{$location.host()}}:{{$location.port()}}{{$state.href('service.general.country.built-in.bankid', {'id': service.nID})}}">
 			<i class="icon-bank-id"></i>
 			<span class="btn-text">BankID</span>
 		</a>
