--- a/central-js/client/src/html/documents/notary/index.html
+++ b/central-js/client/src/html/documents/notary/index.html
@@ -3,7 +3,7 @@
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
 			<div class="col-md-10">
-                            <p>Тут нотаріуси зможуть завантажувати документи із електронно-цифровим підписом. Таким чином, через нотаріусів будь-який документ можна буде переводити із паперового вигляду у ціфровий.</p>
+                            <p>Тут нотаріуси зможуть завантажувати документи із електронно-цифровим підписом. Таким чином, через нотаріусів будь-який документ можна буде переводити із паперового вигляду у цифровий.</p>
                             <a href="https://docs.google.com/presentation/d/17SPm-nD1awYllMNiuv3gQnckOC0VegHj7-SbLtjTOZs/edit#slide=id.p">Докладніше про розділ Документи на порталі iGov</a>
                             <br>
                             (розділ у процесі розробки)
