1. под поиском: 21 послуга (падеж)

--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -9,7 +9,7 @@
             <div class="index-services-count">
                 <span class="index-services-count-item">
                     <nobr>
-                    <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуг доступно онлайн
+                    <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуга доступна онлайн
                     </nobr>
                 </span>
                 <span class="index-services-count-item">
