https://github.com/e-government-ua/i/issues/351

--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -126,6 +126,7 @@
                                                 SMS-пароль).
                         </p>
                         <br>
+                        <p><b>Розділ у процесі розробки!</b></p>
 
                         <div class="panel panel-default">
                          <div class="row">
