--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -28,30 +28,26 @@
       <link rel="stylesheet" href="components/print/print.modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
-    <script>
-          dataLayer = [];
-    </script>
   </head>
   <body ng-app="dashboardJsApp">
- <!-- Google Tag Manager -->
-     <noscript>
-        <iframe src="//www.googletagmanager.com/ns.html?id=GTM-M6NLDF"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe>
-     </noscript>
-     <script>
-        (function (w, d, s, l, i) {w[l] = w[l] || []; w[l].push({'gtm.start':
-        new Date().getTime(), event: 'gtm.js'}); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-        '//www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-M6NLDF');
-     </script>
-<!-- End Google Tag Manager -->
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
     <div ng-view=""></div>
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62587678-3', 'auto');
+      ga('send', 'pageview');
+    </script>
+
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
