--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -37,17 +37,6 @@
     <!-- Add your site or application content here -->
     <div ng-view=""></div>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <!--script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-62587678-3', 'auto');
-      ga('send', 'pageview');
-    </script-->
-
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
@@ -67,8 +56,8 @@
       <script src="bower_components/angular-moment/angular-moment.js"></script>
       <script src="bower_components/ngstorage/ngStorage.js"></script>
       <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
-      <script src="bower_components/ng-clip/dest/ng-clip.min.js"></script>
-      <script src="bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
+      <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
+      <script src="bower_components/ng-clip/src/ngClip.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/moment/locale/uk.js"></script>
