Revert "Merge branch 'admin_controls' into test"
This reverts commit 8e0d8bb807f2601ed4971b52932fa7a80bad7b4c, reversing
changes made to 25ebbbff3ef14d736109ad1e022be674a5a429c4.

--- a/central-js/client/src/html/service/city/content.html
+++ b/central-js/client/src/html/service/city/content.html
@@ -85,8 +85,8 @@
                 </div>
                 <div style="display:inline-block"
                      ng-if="data.region">
-                    <a class="ctrls-admin ctrls-srvc-edit" href="" ng-if="bAdmin" title="Редагувати послугу в цьому регіоні"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>
-                    <a class="ctrls-admin ctrls-srvc-remove" href="" ng-if="bAdmin" title="Видалити послугу в цьому регіоні"><span class="glyphicon glyphicon-remove"></span> Видалити</a>
+                    <a class="ctrls-admin ctrls-srvc-edit" href="" ng-hide="true" title="Редагувати послугу в цьому регіоні"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>
+                    <a class="ctrls-admin ctrls-srvc-remove" href="" ng-hide="true" title="Видалити послугу в цьому регіоні"><span class="glyphicon glyphicon-remove"></span> Видалити</a>    
                 </div>
             </div>
             <div class="col-md-1"
