--- a/central-js/client/src/html/service/region/absent.html
+++ b/central-js/client/src/html/service/region/absent.html
@@ -19,7 +19,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<strong>На жаль, поки що у Вашому регіоні неможливе надання цієї послуги в електронному вигляді.</strong>
-                                <a class="ctrls-admin ctrls-srvc-add" href="" ng-if="bAdmin" title="Додати послугу в цьому регіоні"><span class="glyphicon glyphicon-plus"></span> Додати послугу</a>
+                                <a class="ctrls-admin ctrls-srvc-add" href="" ng-hide="true" title="Додати послугу в цьому регіоні"><span class="glyphicon glyphicon-plus"></span> Додати послугу</a>
 			</div>
 		</div>
 		<div class="row">
