--- a/central-js/client/src/html/service/index.html
+++ b/central-js/client/src/html/service/index.html
@@ -4,21 +4,16 @@
     <div class="row">
         <div class="col-md-12">
             <ul class="nav nav-tabs">
-                <li ui-sref-active="active" role="presentation">
-                    <a ui-sref="service.general({id: service.nID})">Послуга</a>
-                </li>
-                <li ui-sref-active="active" ng-if="service.sInfo.trim() || bAdmin" role="presentation">
-                    <a ui-sref="service.instruction({id: service.nID})">Як працює</a>
-                </li>
-                <li ui-sref-active="active" ng-if="service.sLaw.trim() || bAdmin" role="presentation">
-                    <a ui-sref="service.legislation({id: service.nID})">Законодавство</a>
-                </li>
-                <li ui-sref-active="active" ng-if="service.sFAQ.trim() || bAdmin"role="presentation">
-                    <a ui-sref="service.questions({id: service.nID})">Поширенні питання</a>
-                </li>
-                <li ui-sref-active="active" style="display: none;" role="presentation">
-                    <a ui-sref="service.discussion({id: service.nID})">Обговорення</a>
-                </li>
+                <li ui-sref-active="active"
+                    role="presentation"><a ui-sref="service.general({id: service.nID})">Послуга</a></li>
+                <li ui-sref-active="active" ng-hide="service.sInfo.trim()==''"
+                    role="presentation"><a ui-sref="service.instruction({id: service.nID})">Як працює</a></li>
+                <li ui-sref-active="active" ng-hide="service.sLaw.trim()==''"
+                    role="presentation"><a ui-sref="service.legislation({id: service.nID})">Законодавство</a></li>
+                <li ui-sref-active="active" ng-hide="service.sFAQ.trim()==''"
+                    role="presentation"><a ui-sref="service.questions({id: service.nID})">Поширенні питання</a></li>
+                <li ui-sref-active="active" style="display: none;"
+                    role="presentation"><a ui-sref="service.discussion({id: service.nID})">Обговорення</a></li>
             </ul>
         </div>
     </div>
