--- a/central-js/client/src/html/service/instruction.html
+++ b/central-js/client/src/html/service/instruction.html
@@ -15,8 +15,8 @@
 		</div>
 	</div>
         <div class="ctrls-line">
-            <a class="ctrls-admin ctrls-srvc-edit" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>
-            <a class="ctrls-admin ctrls-srvc-save" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-ok"></span> Зберегти</a>
-            <a class="ctrls-admin ctrls-srvc-cancel" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-minus"></span> Скасувати</a>
+            <a class="ctrls-admin ctrls-srvc-edit" href="" ng-hide="true"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>  
+            <a class="ctrls-admin ctrls-srvc-save" href="" ng-hide="true"><span class="glyphicon glyphicon-ok"></span> Зберегти</a>  
+            <a class="ctrls-admin ctrls-srvc-cancel" href="" ng-hide="true"><span class="glyphicon glyphicon-minus"></span> Скасувати</a>
         </div>
 </div>
