<b>Розділ у процесі розробки!</b>

--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -126,7 +126,9 @@
                                                 SMS-пароль).
                         </p>
                         <br>
-                        <p><b>Розділ у процесі розробки!</b></p>
+			<p style="/*display: none;*/ color:red;"><b>Розділ у процесі розробки!</b></p>
+                        
+                        
 
                         <div class="panel panel-default">
                          <div class="row">
