--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -12,21 +12,11 @@
                                 <label><input type="checkbox" value="">Показати тільки послуги, що доступні через Інтернет</label>
                            </div>
 
-                           <div class="btn-group">
-                               <button class="btn btn-default">Action</button> <button data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
-                               <ul class="dropdown-menu">
-                                   <li>
-                                       <a href="#">Action</a>
-                                   </li>
-                                   <li class="disabled">
-                                       <a href="#">Another action</a>
-                                   </li>
-                                   <li class="divider">
-                                   </li>
-                                   <li>
-                                       <a href="#">Something else here</a>
-                                   </li>
-                               </ul>
+                           <div class="form-group">
+                               <select class="form-control" id="oplist">
+                                   <option>Оберiть установу</option>
+                                   <option ng-repeat="operator in operators">{{operator.sSubjectOperatorName}}</option>
+                               </select>
                            </div>
                        </div>
                    </div>
