--- a/central-js/client/src/html/service/country/built-in/index.html
+++ b/central-js/client/src/html/service/country/built-in/index.html
@@ -1,18 +1,7 @@
   <!--div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
   <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div-->
 
-<div class="list-group">
-	<div class="list-group-item">
-		<span>Крок 1. Увійдіть в систему через</span>
-		<button class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">igov.org.ua</span></button>
-		<a class="btn btn-info" ng-href="{{config.sProtocol_AccessService_BankID}}://{{config.sHost_AccessService_BankID}}/DataAccessService/das/authorize?response_type=code&client_id={{config.client_id}}&redirect_uri={{$location.protocol()}}://{{$location.host()}}:{{$location.port()}}{{$state.href('service.general.country.built-in.bankid', {'id': service.nID})}}">
-			<i class="icon-bank-id"></i>
-			<span class="btn-text">BankID</span>
-		</a>
-		<button class="btn"><i class="icon-mobil-id"></i></button>
-		<button class="btn btn-success i-btn-badge">
-			<i class="icon-badge"></i>
-			<span class="btn-text"><div>Сертифікат електронно-</div><div>цифрового підпису</div></span>
-		</button>
-	</div>
-</div>
+<service-auth-block
+		n-step="1"
+		redirect-uri="{{$state.href('service.general.country.built-in.bankid', {'id': service.nID})}}"
+		></service-auth-block>
