--- a/central-js/client/src/html/service/region/built-in/index.html
+++ b/central-js/client/src/html/service/region/built-in/index.html
@@ -15,17 +15,9 @@
 			</div>
 		</div>
 	</div>
-	<div class="list-group-item" ng-if="data.region">
-		<span>Крок 2. Увійдіть в систему через</span>
-		<button style="display: none;" class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">igov.org.ua</span></button>
-		<a class="btn btn-info" ng-href="{{config.sProtocol_AccessService_BankID}}://{{config.sHost_AccessService_BankID}}/DataAccessService/das/authorize?response_type=code&client_id={{config.client_id}}&redirect_uri={{$location.protocol()}}://{{$location.host()}}:{{$location.port()}}{{$state.href('service.general.region.built-in.bankid', {'id': service.nID, 'region': data.region.nID})}}">
-			<i class="icon-bank-id"></i>
-			<span class="btn-text">BankID</span>
-		</a>
-		<button style="display: none;" class="btn"><i class="icon-mobil-id"></i></button>
-		<button onclick="alert('Працюватиме незабаром');" class="btn btn-success i-btn-badge">
-			<i class="icon-badge"></i>
-			<span class="btn-text"><div>Сертифікат електронно-</div><div>цифрового підпису</div></span>
-		</button>
-	</div>
+	<service-auth-block
+			ng-if="data.region"
+			n-step="2"
+			redirect-uri="{{$state.href('service.general.region.built-in.bankid', {'id': service.nID, 'region': data.region.nID})}}"
+			></service-auth-block>
 </div>
