https://github.com/e-government-ua/i/issues/370 +

--- a/central-js/client/src/html/service/region/built-in/bankid.html
+++ b/central-js/client/src/html/service/region/built-in/bankid.html
@@ -47,7 +47,7 @@
 							<!--div class="col-md-5">{{ sFieldLabel(property.name) }}:</div-->
 							<!--div class="col-md-5">{{property.sFieldLabel}}:</div-->
                                                         <div class="col-md-5">
-                                                            <label style="color: red;" ng-if="data.formData.params[property.id].required">* </label>
+                                                            <label style="color: red;" ng-if="data.formData.params[property.id].required==true">* </label>
                                                             {{property.sFieldLabel}}:
                                                         </div>
                                                         
