--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -76,7 +76,7 @@
                             
                             
                             <div class="col-md-5">
-                                <label style="color: red;" ng-if="data.formData.params[property.id].required">* </label>
+                                <label style="color: red;" ng-if="data.formData.params[property.id].required==true">* </label>
                                 {{property.sFieldLabel}}:
                             </div>
 
