https://github.com/e-government-ua/i/issues/370

--- a/central-js/client/src/html/service/region/built-in/bankid.html
+++ b/central-js/client/src/html/service/region/built-in/bankid.html
@@ -46,8 +46,14 @@
 							<!--div class="col-md-5">{{property.name}}:</div-->
 							<!--div class="col-md-5">{{ sFieldLabel(property.name) }}:</div-->
 							<!--div class="col-md-5">{{property.sFieldLabel}}:</div-->
+                                                        <div style="display: none;">
+                                                            _1{{data.formData.params[property.id].required}}
+                                                            _2{{property.required}}
+                                                            _3{{form[property.id].required}}
+                                                        </div>
+
                                                         <div class="col-md-5">
-                                                            <label style="color: red;" ng-if="data.formData.params[property.id].required==true">* </label>
+                                                            <label style="color: red;" ng-if="property.required==true">* </label>
                                                             {{property.sFieldLabel}}:
                                                         </div>
                                                         
