--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -83,6 +83,11 @@
                             <div class="col-md-5">
                                 <label style="color: red;" ng-if="property.required==true">* </label>
                                 {{property.sFieldLabel}}:
+
+                                <div class="s-field-notes"
+                                     ng-if="property.sFieldNotes!=null">
+                                    {{property.sFieldNotes}}
+                                </div>
                             </div>
 
 
@@ -170,16 +175,6 @@
                                        class="form-control"
                                        value="">
                             </div>
-
-                            <!--div class="col-md-3" style="color:#aaaaaa;width:600px" ng-if="sFieldNotes(property.name)!=null">
-                                {{ sFieldNotes(property.name) }}
-                            </div-->
-                            <div class="col-md-3"
-                                 style="color:#aaaaaa;width:1100px;text-align:left;"
-                                 ng-if="property.sFieldNotes!=null">
-                                {{property.sFieldNotes}}
-                            </div>
-
 
                             <div class="col-md-4"
                                  style="color:#a94442"
