user can now use bank id once while session is alive when navigating between documents and journal

--- a/central-js/client/src/html/documents/index.html
+++ b/central-js/client/src/html/documents/index.html
@@ -15,5 +15,8 @@
             <div ui-view="content"></div>
             <div ui-view="view"></div>
         </div>
+        <div class="text-center" ng-show="loading">
+            <img class="text-center" src="/img/loading.gif" alt="Loading" />
+        </div>
     </div>
 </div>
