--- a/central-js/client/src/html/service/city/built-in/bankid.submitted.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.submitted.html
@@ -54,7 +54,7 @@
                                     {{data.formData.params.bankIdlastName.value}}!</h3>
 
             <div class="text-center">Ваше звернення №{{state.data.id}} успішно зареєстровано</div>
-            <div class="text-center">Результаты будуть спрямовані на Ваш {{data.formData.params.email.value}}</div>
+            <div class="text-center">Результати будуть спрямовані на Ваш {{data.formData.params.email.value}}</div>
         </div>
     </div>
 </div>
