--- a/central-js/client/src/html/service/region/built-in/bankid.submitted.html
+++ b/central-js/client/src/html/service/region/built-in/bankid.submitted.html
@@ -29,7 +29,7 @@
 		<div class="row no-margin-bottom">
 			<h3 class="text-center">Шановний {{data.formData.params.bankIdfirstName.value}} {{data.formData.params.bankIdmiddleName.value}} {{data.formData.params.bankIdlastName.value}}!</h3>
 			<div class="text-center">Ваше звернення №{{state.data.id}} успішно зареєстровано</div>
-			<div class="text-center">Результаты будуть спрямовані на Ваш {{data.formData.params.email.value}}</div>
+			<div class="text-center">Результати будуть спрямовані на Ваш {{data.formData.params.email.value}}</div>
 		</div>
 	</div>
 </div>
