--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -9,7 +9,7 @@
                    <div class="row clearfix">
                        <div class="col-md-12 column">
                            <div class="checkbox">
-                                <label><input type="checkbox" value="">Показати тільки послуги, що доступні через Інтернет</label>
+                                <label><input type="checkbox" ng-change="filterByServiceStatus(showOnlyOnline==true?2 :-1)" ng-model="showOnlyOnline" value="">Показати тільки послуги, що доступні через Інтернет</label>
                            </div>
 
                            <div class="form-group">
@@ -18,11 +18,14 @@
                                    <option ng-repeat="operator in operators">{{operator.sSubjectOperatorName}}</option>
                                </select>
                            </div>
-                       </div>
-                   </div>
-                   <div class="row clearfix">
-                       <div class="col-md-12 column">
-                           <button type="button" class="btn btn-primary pull-right">Знайти</button>
+
+                           <div class="form-group">
+                               <select ng-disabled="showOnlyOnline" ng-model="selectedStatus" class="form-control" ng-change="filterByServiceStatus(selectedStatus)">
+                                   <option value="-1">Всі послуги</option>
+                                   <option value="2">Доступні онлайн</option>
+                                   <option value="1">Послуги, що запустяться незабаром</option>
+                               </select>
+                           </div>
                        </div>
                    </div>
                </div>
