--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -10,7 +10,7 @@
                        <div class="col-md-12 column">
                            <div class="form-group">
                                <select class="form-control" id="oplist" ng-model="operator" ng-change="filterByExtSearch()">
-                                   <option value="Оберiть установу">Оберiть установу</option>
+                                   <option value="-1">Оберiть установу</option>
                                    <option ng-repeat="operator in operators">{{operator.sSubjectOperatorName}}</option>
                                </select>
                            </div>
