--- a/central-js/client/src/html/about/index.html
+++ b/central-js/client/src/html/about/index.html
@@ -363,6 +363,10 @@
                                     </p>
                                 </td>
                                 <td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
+                                    <p dir="ltr"
+                                       style="line-height:1.2;margin-top:0pt;margin-bottom:0pt;">
+                                        <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Соловьев Александр, Донецк/Одесса</span></span>
+                                    </p>
                                 </td>
                             </tr>
                             <tr style="height:0px">
