--- a/central-js/client/src/html/service/country/built-in/bankid.submitted.html
+++ b/central-js/client/src/html/service/country/built-in/bankid.submitted.html
@@ -1,22 +1,29 @@
-  <!--div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
-  <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div-->
+<!--div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
+<div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div-->
 
 <div class="list-group">
-	<div class="list-group-item disabled">
-		<div class="row no-margin-bottom">
-			<div class="col-md-11">Крок 1. Ви увійшли як {{data.formData.params.bankIdfirstName.value}} {{data.formData.params.bankIdmiddleName.value}} {{data.formData.params.bankIdlastName.value}}</div>
-			<div class="col-md-1">
-				<div class="link-button">
-					<a ng-click="step1()">Змінити</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="list-group-item">
-		<div class="row no-margin-bottom">
-			<h3 class="text-center">Шановний {{data.formData.params.bankIdfirstName.value}} {{data.formData.params.bankIdmiddleName.value}} {{data.formData.params.bankIdlastName.value}}!</h3>
-			<div class="text-center">Ваше звернення №{{state.data.id}} успішно зареєстровано</div>
-			<div class="text-center">Результати будуть спрямовані на Ваш {{data.formData.params.email.value}}</div>
-		</div>
-	</div>
+    <div class="list-group-item disabled">
+        <div class="row no-margin-bottom">
+            <div class="col-md-11">Крок 1. Ви увійшли як {{data.formData.params.bankIdfirstName.value}}
+                {{data.formData.params.bankIdmiddleName.value}} {{data.formData.params.bankIdlastName.value}}
+            </div>
+            <div class="col-md-1">
+                <div class="link-button">
+                    <a ng-click="step1()">Змінити</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="list-group-item">
+        <div class="row no-margin-bottom">
+            <h3 class="text-center">Шановний {{data.formData.params.bankIdfirstName.value}}
+                {{data.formData.params.bankIdmiddleName.value}} {{data.formData.params.bankIdlastName.value}}!</h3>
+
+            <div class="text-center" ng-bind-html = "getHtml(data.formData.responce)" ng-if="data.formData.responce"></div>
+            <div ng-if="!data.formData.responce">
+                <div class="text-center">Ваше звернення №{{state.data.id}} успішно зареєстровано</div>
+                <div class="text-center">Результати будуть спрямовані на Ваш {{data.formData.params.email.value}}</div>
+            </div>
+        </div>
+    </div>
 </div>
