--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -30,7 +30,7 @@
                 <a href="#" ng-click="filterByStatus(2)">
                     <span class="index-services-count-item" ng-click="filterByState(2)">
                         <nobr>
-                        <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуга доступна онлайн
+                        <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуги доступно онлайн
                         </nobr>
                     </span>
                 </a>
