--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -29,7 +29,7 @@
             <div class="index-services-count">
                 <span class="index-services-count-item">
                     <nobr>
-                    <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуга доступна онлайн
+                    <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуги доступно онлайн
                     </nobr>
                 </span>
                 <span class="index-services-count-item">
