Revert "https://github.com/e-government-ua/i/issues/442"
This reverts commit 08ea33d6230cf6f4fb6b9c83c39fe656d9b1d4d6.

--- a/central-js/client/src/html/service/region/absent.html
+++ b/central-js/client/src/html/service/region/absent.html
@@ -38,8 +38,8 @@
                                                                 <div class="pluso" style="margin-top:10px;"
                                                                          data-background="transparent"
                                                                          data-options="big,round,line,horizontal,counter,theme=04"
-                                                                         data-title="Закликаю владу перевести цю послугу в електронну форму! {{data.region.sName}} – {{service.sName}}"
-                                                                         data-description="{{data.region.sName}} – {{service.sName}}"
+                                                                         data-title="Закликаю владу перевести цю послугу в електронну форму! {{data.city.sName}} – {{service.sName}}"
+                                                                         data-description="{{data.city.sName}} – {{service.sName}}"
                                                                          data-services="facebook,vkontakte,twitter">
                                                                 </div>
                                                             </center>
