polosatui commented an hour ago фсьо працює, тільки треба виправити літеру у слові пришвидЧити на пришвидШити https://github.com/e-government-ua/i/issues/442#issuecomment-115723132

--- a/central-js/client/src/html/service/region/absent.html
+++ b/central-js/client/src/html/service/region/absent.html
@@ -26,7 +26,7 @@
 			<!--div class="col-md-12 text-center">Ознайомитись, як можна скористатися цією послугою, можна в <a ui-sref="service.instruction({ id: service.nID })">Інструкції</a></div-->
                         <!--<div class="col-md-12 text-center">Ознайомитись, як можна скористатися цією послугою, можна в <a ui-sref="service.instruction({ id: service.nID })">Інструкції</a></div>-->
                         <div class="col-md-12">
-                            <center style="margin-bottom:10px;"><b><span class="text-center">Ви можете допомогти пришвидчити процес переведння послуги в електронний вигляд:</span></b></center>
+                            <center style="margin-bottom:10px;"><b><span class="text-center">Ви можете допомогти пришвидшити процес переведння послуги в електронний вигляд:</span></b></center>
                                 <!--ol>
                                         <li-->
                                                 <table style="vertical-align:top;">
