--- a/central-js/client/src/html/service/city/content.html
+++ b/central-js/client/src/html/service/city/content.html
@@ -1,6 +1,3 @@
-<!--div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
-<div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div-->
-
 <div class="list-group">
     <div class="list-group-item"
          ng-class="{'disabled': data.city}">
@@ -37,7 +34,7 @@
                         </div>
                         <ul class="dropdown-menu"
                             role="menu">
-                            <li ng-repeat="region in regionList.dropdown.list track by $index">
+                            <li ng-repeat="region in regionList.dropdown.list | orderBy:'sName'">
                                 <a ng-click="onSelectRegionList(region, null, null)"
                                    ng-class="{'color-green': (region.color == 'green')}">{{region.sName}}</a>
                             </li>
@@ -76,7 +73,7 @@
                         <ul class="dropdown-menu"
                             role="menu"
                             ng-show="localityList.dropdown.list.length > 0">
-                            <li ng-repeat="city in localityList.dropdown.list track by $index">
+                            <li ng-repeat="city in localityList.dropdown.list | orderBy:'sName'">
                                 <a ng-click="onSelectLocalityList(city, null, null)"
                                    ng-class="{'color-green': (city.color == 'green')}">{{city.sName}}</a>
                             </li>
