--- a/central-js/client/src/html/service/region/built-in/index.html
+++ b/central-js/client/src/html/service/region/built-in/index.html
@@ -1,23 +1,30 @@
 <div class="list-group">
-	<div class="list-group-item" ng-class="{'disabled': data.region}">
-		<div class="row no-margin-bottom">
-			<div class="col-md-11 form-inline">
-				<strong><span>Крок 1. Оберіть свій регіон </span></strong>
-				<div style="display:inline-block">
-					<span>Область</span>
-					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.sName for region in [data.region] track by region.nID" ng-disabled="data.region"></select>
-				</div>
-			</div>
-			<div class="col-md-1" ng-if="data.region">
-				<div class="link-button">
-					<a ng-click="step1()">Змінити</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<service-auth-block
-			ng-if="data.region"
-			n-step="2"
-			redirect-uri="{{$state.href('service.general.region.built-in.bankid', {'id': service.nID, 'region': data.region.nID})}}"
-			></service-auth-block>
+    <div class="list-group-item"
+         ng-class="{'disabled': data.region}">
+        <div class="row no-margin-bottom">
+            <div class="col-md-11 form-inline">
+                <strong><span>Крок 1. Оберіть свій регіон </span></strong>
+
+                <div style="display:inline-block">
+                    <span>Область</span>
+                    <select class="form-control"
+                            name="region"
+                            ng-model="data.region"
+                            ng-options="region as region.sName for region in [data.region] | orderBy:'sName'"
+                            ng-disabled="data.region"></select>
+                </div>
+            </div>
+            <div class="col-md-1"
+                 ng-if="data.region">
+                <div class="link-button">
+                    <a ng-click="step1()">Змінити</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <service-auth-block
+            ng-if="data.region"
+            n-step="2"
+            redirect-uri="{{$state.href('service.general.region.built-in.bankid', {'id': service.nID, 'region': data.region.nID})}}"
+            ></service-auth-block>
 </div>
