adding error message if auth is failed

--- a/central-js/client/src/html/journal/bankid/index.html
+++ b/central-js/client/src/html/journal/bankid/index.html
@@ -11,4 +11,7 @@
             </div>
         </form>
     </div>
+    <div class="text-center" ng-show="error">
+        <p>{{error}}</p>
+    </div>
 </div>
