https://github.com/e-government-ua/i/issues/440

--- a/central-js/client/src/html/journal/bankid/index.html
+++ b/central-js/client/src/html/journal/bankid/index.html
@@ -4,7 +4,7 @@
             <h4 class="form-signin-bankid-heading_">Щоб почати користуватись сервісом “Мій журнал”, 
                 <a href="#" ng-click="loginWithBankId()">увійдіть через BankID</a>
                 або через 
-                <a href="#" onclick="alert('Працюватиме незабаром');">електронно-ціфровий підпис</a>
+                <a href="#" onclick="alert('Працюватиме незабаром');">електронно-цифровий підпис</a>
             </h4>
             <div style="display: none;">
                 <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="loginWithBankId()">BankID</button>
