https://github.com/e-government-ua/i/issues/467 fix https://github.com/e-government-ua/i/issues/467#issuecomment-117122964 +

--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -80,7 +80,7 @@
                                 _3{{form[property.id].required}}
                             </div>
                             
-                            <div class="col-md-5" ng-if="property.type!=invisible && property.type!=markers">*>
+                            <div class="col-md-5" ng-if="property.type!=invisible && property.type!=markers">
                                 <label style="color: red;" ng-if="property.required==true">* </label>
                                 {{property.sFieldLabel}}:
 
