downloading from the same page

--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -76,7 +76,7 @@
                 </td>
                 <td>
                     <a ng-href="{{getDocumentLink(doc.nID)}}"
-                       target="_blank">
+                       target="_self">
                         <span class="glyphicon glyphicon-duplicate"
                               title="Завантажити копію"
                               aria-hidden="true"></span></a>
