--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -122,7 +122,7 @@
                 <div ng-show="attachments">
                     <p ng-repeat="item in attachments">
                         Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{($index+1)}}"
-                                 target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
+                                 target="_blank"><b>{{item.name}}</b></a> {{item.description}}
                     </p>
                 </div>
                 <p ng-if="selectedTask">
