refactoring promises in initial uploading, adding error showing logic

--- a/central-js/client/src/html/documents/bankid/index.html
+++ b/central-js/client/src/html/documents/bankid/index.html
@@ -16,6 +16,6 @@
         <img class="text-center" src="/img/loading.gif" alt="Loading" />
     </div>
     <div class="text-center" ng-show="error">
-        <p>{{error}}</p>
+        <b style="color:red;">{{error}}</b>
     </div>
 </div>
