--- a/central-js/client/src/html/about/index.html
+++ b/central-js/client/src/html/about/index.html
@@ -173,7 +173,7 @@
                                 <td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
                                     <p dir="ltr"
                                        style="line-height:1.2;margin-top:0pt;margin-bottom:0pt;">
-                                        <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Вилинский Александр, Днепропетрвоск</span></span>
+                                        <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Вилинский Александр, Днепропетровск</span></span>
                                     </p>
                                 </td>
                                 <td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
@@ -379,7 +379,7 @@
                                 <td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
                                     <p dir="ltr"
                                        style="line-height:1.2;margin-top:0pt;margin-bottom:0pt;">
-                                        <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Романова Леся, Днепропетрвоск</span></span>
+                                        <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Романова Леся, Днепропетровск</span></span>
                                     </p>
                                 </td>
                                 <td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: top; padding: 7px;">
