Отримати код https://github.com/e-government-ua/i/issues/377#issuecomment-118337707

--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -211,7 +211,7 @@
                                         <div class="submit-button">
                                             <button type="submit"
                                                     class="btn btn-primary"
-                                                    ng-disabled="shareLinkForm.$invalid">Надати доступ
+                                                    ng-disabled="shareLinkForm.$invalid">Отримати код
                                             </button>
                                         </div>
                                     </form>
